gdb caching ok